methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:29: error: value c is not a member of object java.awt.Color
      if (getCouleurSol()==Color.c) {
                                 ^